Fix icons spacing in details list on touch
Remove unnecesary margin when displaying two icons next to each other
like is now the case for "open in reader" and "download" actions.

--- a/src/scss/partials/_details-list.scss
+++ b/src/scss/partials/_details-list.scss
@@ -115,7 +115,7 @@
 		}
 
 		.truncate,
-		a {
+		a:not(.btn-icon) {
 			margin-right: $space-xs;
 		}
 
